@@ -11,6 +11,7 @@ capital = "Waren"
 is_city = yes
 add_core = LTC
 fort_14th = yes
+add_province_triggered_modifier = inti_lima
 
 1093.1.1 = {
 	owner = MKL
