@@ -185,6 +185,8 @@
  desc_theravada_kotte: "We are in control of Baghdad, seat of the Nestorian Patriarch and an important Christian community in the east."
  hindu_varanasi: "Sanctuaries of Gizah"
  desc_hindu_varanasi: "We are in control of the Holy City of Gizah, place of the ancient Egyptian Sphinx and Pyramids."
+ inti_lima: "Conquest of Rethra"
+ desc_inti_lima: "We are in control of the sanctuary of Rethra, held sacred by all who follow the Slavic faith."
  mayan_chichen_itza: "Mount Kazbek"
  desc_mayan_chichen_itza: "We are in control of Mount Kazbek, held sacred by all who follow the Caucasian faiths."
  mahayana_louyang: "Conquest of Olympia"
