@@ -185,6 +185,8 @@
  desc_theravada_kotte: "Wir beherrschen Bagdad, den Sitz des nestorianischen Patriarchen und einer wichtigen christlichen Gemeinschaft im Osten."
  hindu_varanasi: "Heiligtümer von Gizeh"
  desc_hindu_varanasi: "Wir beherrschen die heilige Stadt Gizeh, den Ort der altägyptischen Sphinx und Pyramiden."
+ inti_lima: "Eroberung von Rethra"
+ desc_inti_lima: "Wir kontrollieren das Heiligtum von Rethra, das allen heilig ist, die dem slawischen Glauben anhängen."
  mayan_chichen_itza: "Berg Kasbek"
  desc_mayan_chichen_itza: "Wir haben die Kontrolle über den Berg Kasbek, der allen, die den kaukasischen Glaubensrichtungen folgen, heilig ist."
  mahayana_louyang: "Eroberung von Olympia"
