@@ -204,3 +204,7 @@
  merc_kutama: "Kutama"
  merc_jutlandic_freischar: "Jutlandic Freischar"
  merc_geharnischte: "Geharnischte"
+ merc_landsknechts: "Landsknechts"
+ merc_saharan_company: "Saharan Company"
+ merc_bolghar_mercenaries: "Bolghar Mercenaries"
+ merc_polabian_warriors: "Polabian Warriors"
