@@ -204,3 +204,7 @@
  merc_kutama: "Kutama"
  merc_jutlandic_freischar: "Jütländische Freischar"
  merc_geharnischte: "Geharnischte"
+ merc_landsknechts: "Landsknechte"
+ merc_saharan_company: "Saharische Kompanie"
+ merc_bolghar_mercenaries: "Bolgarische Söldner"
+ merc_polabian_warriors: "Polabische Krieger"
