@@ -2,8 +2,9 @@
 
 # v 2.0.6 #
 
--Added the following new mercenary companies: Kutama, Jutlandic Freischar, Geharnischte
+-Added the following new mercenary companies: Kutama, Jutlandic Freischar, Geharnischte, Landskenchts, Saharan Company Bolghar Mercenaries, Polabian Warriors
 -Added Mamluk rebel type
+-Added triggered province modifier for the Slavic sanctuary of Rethra
 -More German localization additions
 -Other minor localization/bug fixes
 
